...
                    Button(action: {
                        viewModel.toggleWatchlist(movieId: movie.id)
                    }) {
                        Image(systemName: viewModel.isMovieInWatchlist(movie.id) ? "heart.fill" : "heart")
                            .foregroundColor(viewModel.isMovieInWatchlist(movie.id) ? .red : .gray)
                    }
                    .accessibilityIdentifier("addToWatchListButton")
                }
                .padding(.top)

                Text("Release Date: \(movie.releaseDate)")
                    .font(.subheadline)
                    .padding(.vertical, 2)
...
